Add linear algebra

--- a/Mathematics_Formulary/sections/geometry.tex
+++ b/Mathematics_Formulary/sections/geometry.tex
@@ -2,11 +2,6 @@
 Geometry (from the Ancient Greek: geo- "earth", -metron "measurement") is a branch of mathematics concerned with questions of shape, size, relative position of figures, and the properties of space.
 
 
-
-
-
-
-
 \section{Plane Geometry}
 \subsection{Point, Lines}
 Distance between two points $P=(x_1,y_1)$ and $Q=(x_2,y_2)$ in $\mathbb{R}^2$ : $ \overline{PQ} = \sqrt{(x_1-x_2)^2+(y_1-y_2)^2} $
@@ -20,8 +15,7 @@ Line equation given two points P and Q: $ y-y_1 = \frac{y_2-y_1}{x_2-x_1}(x-x_1)
 Distance of one point P from the line r with equation $ax+by+c=0$ : $ d(U,r) = \frac{\left|ax_1+by_1+c\right|}{\sqrt{a^2+b^2}}$
 
 
-
-\section{Trigoniometry}
+\section{Trigonometry}
 \textbf{Definition:} Trigonometry (from Greek trigonon, "triangle" and metron, "measure") is a branch of mathematics that studies relationships involving lengths and angles of triangles.
 
 \subsection{Goniometric functions}
