--- a/Mathematics_Formulary/sections/algebra.tex
+++ b/Mathematics_Formulary/sections/algebra.tex
@@ -1,7 +1,7 @@
 \chapter{Algebra}
 
 \section{Polynomial}
-Short multiplication formulas:
+Shoeriert multiplication formulas:
 $$(x + y)^2 = x^2 + 2xy + y^2$$
 $$(x - y)^2 = x^2 - 2xy + y^2$$ 
 $$(x + y + z)^2 = x^2 + y^2 + z^2 + 2xy + 2yz + 2zx$$ 
