--- a/Mathematics_Formulary/sections/linear_algebra.tex
+++ b/Mathematics_Formulary/sections/linear_algebra.tex
@@ -431,7 +431,7 @@ there exists a transformation $A_k$ so that $\vec{v}_i$ and $\vec{v}_j$ are
 eigenvectors with different eigenvalues of $A_k$.
  
 Usually a commuting set is taken as small as possible. In quantum physics one
-speaks of commuting observables. The required number of commuting observables
+speaks of commuting observables. The required number of commuting obsieervables
 equals the number of quantum numbers required to characterize a state.
 
 \section{Homogeneous coordinates}
