--- a/Mathematics_Formulary/sections/probability.tex
+++ b/Mathematics_Formulary/sections/probability.tex
@@ -1,25 +1,15 @@
 \chapter{Probability and statistics}
 
 \section{Binomial coefficients}
-\begin{multicols}{3}
-	
-	\[ \binom{n}{k} = \frac{n!}{k!(n-k)!} \]
-	
-	\[ \binom{n}{k} = \binom{n}{n-k} \]
-	
-	\[ \binom{n}{k} + \binom{n}{k-1} = \binom{n+1}{k} \]
-	
-	\[ \binom{n}{0} = \binom{n}{n} = 1 \]
-	
-	\[ \binom{n}{1} = \binom{n}{n-1} = n \]
-	
-	\[ \sum_{k=0}^{n}\binom{n}{k} = 2^n \]
-	
-	\[ \sum_{k=0}^{n}\sum_{h=0}^{k}\binom{n}{k}\binom{k}{h} = 3^n \]
-	
-	\[ \sum_{k=0}^{n}\sum_{h=0}^{k}\sum_{i=0}^{h}\binom{n}{k}\binom{k}{h}\binom{h}{i} = 4^n \]
-	
-\end{multicols}
+\begin{tabular}{ l l l }
+$ \displaystyle \binom{n}{k} = \frac{n!}{k!(n-k)!} $  &
+$ \displaystyle \binom{n}{k} = \binom{n}{n-k} $  &
+$ \displaystyle \binom{n}{k} + \binom{n}{k-1} = \binom{n+1}{k} $  \\
+$ \displaystyle \binom{n}{0} = \binom{n}{n} = 1  $  &
+$ \displaystyle \binom{n}{1} = \binom{n}{n-1} = n  $  & 
+$ \displaystyle \sum_{k=0}^{n}\sum_{h=0}^{k}\binom{n}{k}\binom{k}{h} = 3^n  $  \\
+$ \displaystyle \sum_{k=0}^{n}\sum_{h=0}^{k}\sum_{i=0}^{h}\binom{n}{k}\binom{k}{h}\binom{h}{i} = 4^n  $	
+\end{tabular}
 
 \section{Permutations}
 \textbf{Permutation}: set of ordered things (e.g. $(1,2,3)\ne(3,2,1)$).
