--- a/Mathematics_Formulary/sections/calculus.tex
+++ b/Mathematics_Formulary/sections/calculus.tex
@@ -228,7 +228,7 @@ $ \displaystyle  f(x)=e^{g(x)} ~ \Rightarrow ~ f^\prime(x)=e^{g(x)}g^\prime(x) $
 \subsubsection{Logarithm Derivatives}
 \begin{tabular}{ l l }
 $ \displaystyle  f(x)=\log_a(x) ~ \Rightarrow ~ f^\prime(x)= \frac{1}{ \ln(a)x } $ & 
-$ \displaystyle  f(x)=\ln(x) ~ \Rightarrow ~ f^\prime(x)= \frac{1}{ x } $ \\ [1.5em]
+$ \displaystyle  f(x)=\ln(x) ~ \Rightarrow ~ f^\prime(x)= \frac{1}{ x } $ \\ [1.5ex] 
 $ \displaystyle  f(x)=\log_a(g(x)) ~ \Rightarrow ~ f^\prime(x)= \frac{g^\prime(x)}{ \ln(a)g(x) } $ & 
 $ \displaystyle  f(x)=\ln(g(x)) ~ \Rightarrow ~ f^\prime(x)= \frac{g^\prime(x)}{ g(x) } $ 
 \end{tabular}
